[gd_scene load_steps=2 format=3 uid="uid://orwfdvsg1eej"]

[ext_resource type="Script" path="res://Games/assessment/rom_scene.gd" id="1_gl5cx"]

[node name="RomScene" type="Node2D"]
script = ExtResource("1_gl5cx")

[node name="Lines" type="Node2D" parent="."]

[node name="StopButton" type="Button" parent="."]
texture_filter = 1
offset_left = 708.0
offset_top = 591.0
offset_right = 781.0
offset_bottom = 631.0
text = "Stop"

[node name="set_orgin" type="Button" parent="."]
texture_filter = 1
offset_left = 394.0
offset_top = 594.0
offset_right = 485.0
offset_bottom = 633.0
text = "Set orgin
"

[node name="start" type="Button" parent="."]
texture_filter = 1
offset_left = 553.0
offset_top = 593.0
offset_right = 627.0
offset_bottom = 633.0
text = "Start"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="set_orgin" to="." method="_on_set_orgin_pressed"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
